--- a/ConfigurationCookbook/multiple files/miner.conf
+++ b/ConfigurationCookbook/multiple files/miner.conf
@@ -1,7 +1,7 @@
 # the special ability of the job
 ability {
     cooldown=600
-    name="Fast Destory"
+    name="Fast Destroy"
     # the settings of the potion effect
     potionEffect {
         ambiance=false
@@ -101,7 +101,7 @@ actions {
         },
         {
             # an blockstate or blocktype as a string, see http://minecraft.gamepedia.com/Data_values#Block_IDs it also supports blockdata
-            item="minecraft:emeral_ore"
+            item="minecraft:emerald_ore"
             # level needed to use this item with the action
             needLevel=100
             # amount of job xp gained after finishing the action with this item
