--- a/ConfigurationCookbook/miner/laborus.conf
+++ b/ConfigurationCookbook/miner/laborus.conf
@@ -2,7 +2,7 @@ jobs=[
   {
     ability {
       cooldown=600
-      name="Fast Destory"
+      name="Fast Destroy"
       potionEffect {
         ambiance=false
         amplifier=2
@@ -64,7 +64,7 @@ jobs=[
           xp=25
         },
         {
-          item="minecraft:emeral_ore"
+          item="minecraft:emerald_ore"
           needLevel=100
           xp=30
         },
