--- a/ConfigurationCookbook/translations/laborus.conf
+++ b/ConfigurationCookbook/translations/laborus.conf
@@ -32,7 +32,7 @@ commands {
         # description of the player parameter
         paramPlayerDescription=player
         # permission needed to use the player parameter
-        paramPlayerPermission="laborus.commands.addXp.outher_player"
+        paramPlayerPermission="laborus.commands.addXp.other_player"
         # description of the xp parameter
         paramXpDescription=xp
         # permission needed to use the command
